# cpp-cmake-template

./: CMakeLists.txt  compile.bat  compile.sh
